<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.inventoryapp.DetailsActivity">

    <ImageView
        android:id="@+id/details_picture"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:text="Name" />

    <TextView
        android:id="@+id/details_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:text="Price" />

    <TextView
        android:id="@+id/details_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:text="Supplier" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/details_decrease_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_decrease_qty" />

        <TextView
            android:id="@+id/details_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            tools:text="Quantity" />

        <Button
            android:id="@+id/details_increase_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_increase_qty" />

    </LinearLayout>

    <Button
        android:id="@+id/details_delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete_product" />

    <Button
        android:id="@+id/details_order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_order_product" />

</LinearLayout>
